--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -15,14 +15,39 @@ body {
   background-color: $first-color;
   font-family: "Open Sans", sans-serif;
 }
-.active {
+::selection {
+  background-color: $accent-color;
+  color: $first-color;
+}
+
+.sidebar,
+nav {
   background-color: $second-color;
 }
 
-.sidebar {
-  background-color: $third-color;
-
+h1 {
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    border-radius: 8px;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-color: $third-color;
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    border-radius: 8px;
+    left: 0;
+    width: 80%;
+    height: 5px;
+    background-color: $accent-color;
+  }
 }
-.active{
-  background-color: #ff4c29;
+
+.active {
+  background-color: rgb(30 41 59);
 }
